--- a/style.css
+++ b/style.css
@@ -125,3 +125,12 @@ ul {
     font-size: 0.8rem;
     opacity: 0.8;
 }
+
+@media (max-width: 650px){
+    #bottom-left-section, #bottom-right-section, #card{
+        width: 100%;
+        height: auto;
+        
+    }
+    
+}
